# wgpu-quick

./: Cargo.toml  README.md
examples/mouse-and-texture/: main.rs
examples/mouse-and-texture/shader/: mod.rs  shader.wgsl
examples/quick-triangle/: main.rs
examples/quick-triangle/shader/: mod.rs
examples/raw-handle-example/: main.rs
examples/raw-handle-example/shader/: mod.rs
examples/texture/: main.rs
examples/texture/shader/: mod.rs  shader.wgsl
examples/texture/vertex/: mod.rs
src/: bindings.rs  bytemuck.rs  init.rs  lib.rs  looputil.rs  model.rs  pipelines.rs  rect.rs  renderobj.rs  texture.rs  uniforms.rs  utils.rs
src/buffer/: mod.rs  uniform.rs  vertex.rs
src/buffer/vertex/: mod.rs
src/renderable/: mod.rs  model.rs
src/runtime/: conductor.rs  mod.rs  program.rs  timemgmt.rs
