[package]
name = "wgpu-quick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "*"
bytemuck = "1.9.1"
winit = "*"
raw-window-handle = "*"
anyhow = "*"
image = "0.24.2"
pollster = "0.2.5"

[dev-dependencies]
winit = "*"
pollster = "*"
raw-window-handle = "*"