[package]
name = "wgpu-quick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13.1"
bytemuck = "1.9.1"
winit = "0.26.1"
raw-window-handle = "0.4.3"
anyhow = "*"
image = "0.24.2"
pollster = "0.2.5"
obj-rs = {git = "https://github.com/simnalamburt/obj-rs.git"}

[dev-dependencies]
winit = "*"
pollster = "*"
raw-window-handle = "0.4.3"