[package]
name = "wgpu-quick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.15.1"
bytemuck = "1.9.1"
winit = "0.28.2"
raw-window-handle = "0.5.0"
anyhow = "1.0.69"
image = "0.24.2"
pollster = "0.3.0"
obj-rs = {git = "https://github.com/simnalamburt/obj-rs.git"}

[dev-dependencies]
winit = "0.28.2"
pollster = "0.3.0"
raw-window-handle = "0.5.0"